feat: implement auth endpoints, strategies, guards, access token
