# src/auth/auth.controller.ts
@@ -1,0 +1,34 @@
+import {
+  Body,
+  ClassSerializerInterceptor,
+  Controller,
+  HttpCode,
+  Request,
+  Post,
+  UseGuards,
+  UseInterceptors,
+} from '@nestjs/common';
+import { CreateUserDto } from 'src/users/dto/create-user.dto';
+import { AuthService } from './auth.service';
+import { LocalAuthGuard } from './guards/local-auth.guard';
+
+@Controller('auth')
+export class AuthController {
+  constructor(private authService: AuthService) {}
+
+  @UseInterceptors(ClassSerializerInterceptor)
+  @Post('signup')
+  @HttpCode(201)
+  async create(@Body() createUserDto: CreateUserDto): Promise<string> {
+    await this.authService.create(createUserDto);
+    return 'Successful signup';
+  }
+
+  @UseInterceptors(ClassSerializerInterceptor)
+  @UseGuards(LocalAuthGuard)
+  @Post('login')
+  @HttpCode(200)
+  async login(@Request() req) {
+    return await this.authService.login(req.user);
+  }
+}
